--- a/wp-content/themes/cls/src/assets/scss/site/primary/_pages.scss
+++ b/wp-content/themes/cls/src/assets/scss/site/primary/_pages.scss
@@ -32,6 +32,8 @@
             &> .entry-content,
             &> .entry-footer {
                 max-width: 100%;
+                padding-right: 0;
+                padding-left: 0;
             }
         }
     
